--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>Тебе необходимо включить JavaScript чтобы сайт отобразился корректно</noscript>
-    <div id="root"></div>
+    <div id="root" class="theme-black"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
