feat: добавляет изображения для галереи и обновляет компонент Gallery

--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
   </head>
   <body>
     <noscript>Тебе необходимо включить JavaScript чтобы сайт отобразился корректно</noscript>
-    <div class="App front-image stub-animation" id="stub">
+    <div class="App front-image" id="stub">
       <header class="App-header">
         <img src="brand.svg" class="App-logo" alt="brand">
         <p>🍳Cooking Trail Protection<div class="spinner-border text-light"></div></p>
