feat: добавляет open graph

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+    <meta property="og:title" content="Trail Protection - Экипировка, Одежда, Защита" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://trailprotection.ru" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+    <meta property="og:description" content="Мы - бренд из Ижевска, специализирующийся на производстве одежды для велосипедистов и аксессуаров для защиты велосипедов, а также для людей, занимающихся активным отдыхом." />
+    <meta property="og:site_name" content="Страница о бренде и товарах Trail Protection" />    
+
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
